# scheduler_python

./: README.md  main.py  pyproject.toml
constants/: constants.py
formatters/: format_matches.py  format_preferences.py  format_priorities.py  format_schedule.py  transform.py
joiners/: match_info_joiner.py  preferences_joiner.py  schedule_info_joiner.py
output/: overdue.csv  overdue_tasks.csv  partial.csv  partially_processed_tasks.csv  processed.csv  processed_tasks.csv
output/ss/: partial.csv  processed.csv
output/test1/: overdue.csv  partial.csv  processed.csv
parser/: parse_csv.py
scheduler/: schedule.py
scheduler/helpers/: create_empty_dataframes.py  employee_helpers.py
src/constants/: constants.py
src/formatters/: format_competitions.py  format_matches.py  format_preferences.py  format_schedule.py  transform.py
src/joiners/: match_info_joiner.py  preferences_joiner.py
src/parser/: parse_csv.py
src/reporting/: create_report.py
src/scheduler/: schedule.py
src/scheduler/helpers/: employee_helpers.py
src/scheduler/processors/: process_task.py
src/writer/: write.py
tests/: utils.py
tests/formatters/: test_format_competitions.py  test_format_matches.py  test_format_preferences.py  test_format_priorities.py  test_format_schedule.py
tests/joiners/: test_match_info_joiner.py  test_preferences_joiner.py
tests/reporting/: test_create_report.py
tests/scheduler/: rough_test.py
tests/scheduler/helpers/: test_create_empty_dataframes.py  test_employee_helpers.py
tests/scheduler/parser/: test_data.csv  test_parse.py
writer/: write.py
(+1 files in other folders)
