[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["Stephen Roberts <stephen.roberts2@skybettingandgaming.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.1"
sqlalchemy = "^1.4.42"
pymysql = "^1.0.2"
numpy = "^1.23.4"
pytest = "^7.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
